# NeonLink

./: .dockerignore  .env.example  .gitignore  Directory.Build.props  Dockerfile  NeonLink.sln  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
docker/: desktop-builder.Dockerfile  desktop.Dockerfile  flutter-android.Dockerfile  flutter.Dockerfile  server.Dockerfile
docker/postgres/conf/: custom.conf
docker/postgres/init/: 01-init.sql
docker/scripts/: build-all.ps1  build.sh  start.sh
docs/: RESTRUCTURING.md
docs/api/: telemetry-schema.json
neonlink_app/: README.md  pubspec.yaml
neonlink_app/.dart_tool/: package_config.json  package_graph.json
neonlink_app/.dart_tool/build_resolvers/: sdk.sum.deps
neonlink_app/.dart_tool/extension_discovery/: devtools.json  vs_code.json
neonlink_app/.dart_tool/flutter_build/: dart_plugin_registrant.dart
neonlink_app/android/app/: build.gradle.kts
neonlink_app/lib/: app.dart  main.dart
neonlink_app/lib/providers/: connection_provider.dart  log_provider.dart  script_provider.dart  telemetry_history_provider.dart  telemetry_provider.dart  theme_provider.dart
neonlink_app/lib/services/: backup_service.dart  command_builder.dart  discovery_service.dart  log_service.dart  notification_service.dart  websocket_service.dart
neonlink_app/test/integration/: model_sync_test.dart
plans/: neonlink-android-plan.md  neonlink-current-state.md  neonlink-debug-changes.md  neonlink-desktop-plan.md  neonlink-full-architecture-plan.md  neonlink-integration-plan.md  neonlink-next-steps.md  neonlink-server-plan.md
src/NeonLink.Server/: NeonLink.Server.csproj  Program.cs  appsettings.json
src/NeonLink.Server/Configuration/: Settings.cs
src/NeonLink.Server/Models/: CommandModels.cs  TelemetryData.cs
src/neonlink_desktop/: README.md  __init__.py  __main__.py  app.py  config.py  neonlink.spec  pyproject.toml  requirements.txt
src/neonlink_desktop/models/: __init__.py  config_model.py  connection_model.py  log_entry.py  script_model.py
src/neonlink_desktop/neonlink_desktop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/neonlink_desktop/resources/styles/: dark_theme.qss  light_theme.qss
src/neonlink_desktop/services/: __init__.py  backup_service.py  config_manager.py  credential_manager.py  database_service.py  error_handler.py  log_service.py  notification_service.py  script_installer.py  script_runner.py  update_service.py  validation_service.py
src/neonlink_desktop/tests/: test_models.py
src/neonlink_desktop/viewmodels/: __init__.py  script_manager_vm.py
src/neonlink_desktop/views/: __init__.py  help_view.py  log_view.py  main_window.py  settings_view.py
tests/NeonLink.Server.Tests/: CacheServiceTests.cs  CommandServiceTests.cs  GlobalUsings.cs  NeonLink.Server.Tests.csproj  SecurityServiceTests.cs  SensorServiceTests.cs  WebSocketServiceTests.cs
tests/NeonLink.Tests/: CacheServiceTests.cs  CommandServiceTests.cs  NeonLink.Tests.csproj  NetworkServiceTests.cs  SecurityServiceTests.cs  SensorServiceTests.cs  TelemetryChannelServiceTests.cs
(+41 files in other folders)
